Fix 5 additional bugs in test-order-cli and test-order-coverage-mojo modules
Phase 2: Bug Fixes
- JaCoCoReportParser: Fixed redundant extractCovered() call (performance)
- CiConfigParser: Improved exception handling using Files API (clarity)
- MarkdownGenerator: Added error handling for mkdirs() failures (reliability)
- CoverageMojo: Added null checks on MavenProject.getBuild() (robustness)

All 84 tests passing (58 CLI + 26 coverage)
- Reduced redundant DOM traversal
- Better error messages for troubleshooting
- Prevents silent file system failures
- Graceful handling of missing build config

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>